--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,34 +7,34 @@ Farbe: #323A45 / #848484
 =======================*/
 
 @font-face {
-    font-family: karla;
-    src: url("../fonts/Karla-Regular.ttf");
+  font-family: karla;
+  src: url("../fonts/Karla-Regular.ttf");
 }
 
 @font-face {
-    font-family: karlabold;
-    src: url("../fonts/Karla-Bold.ttf");
+  font-family: karlabold;
+  src: url("../fonts/Karla-Bold.ttf");
 }
 
 html {
-    font-size: 10px;
-    margin: 0 8%;
-    scroll-behavior: smooth;
-    font-family: karla;
+  font-size: 10px;
+  margin: 0 8%;
+  scroll-behavior: smooth;
+  font-family: karla;
 }
 
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 img:hover {
-    opacity: 50%;
+  opacity: 50%;
 }
 
 /*=====================
@@ -42,39 +42,59 @@ img:hover {
 =======================*/
 
 header {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    justify-content: space-between;
-    width: 100%;
-    height: 16vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  justify-content: space-between;
+  width: 100%;
+  height: 16vh;
 }
 
 header h1 a {
-    font-size: 2rem;
-    color: #323A45;
-    font-weight: 900;
-    font-family: karlabold;
-    text-decoration: none;
+  font-size: 2rem;
+  color: #323a45;
+  font-weight: 900;
+  font-family: karlabold;
+  text-decoration: none;
 }
 
 header nav ul {
-    display: inline-flex;
-    justify-content: flex-end;
-    list-style-type: none;
-    gap: 4rem;
+  display: inline-flex;
+  justify-content: flex-end;
+  list-style-type: none;
+  gap: 4rem;
 }
 
 header nav ul li a {
-    text-decoration: none;
-    font-size: 1.2rem;
-    color: #323A45;
-    font-weight: 900;
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: #323a45;
+  font-weight: 900;
 }
 
 header a:hover {
-    color: grey;
-    opacity: 50%;
+  color: rgb(247, 6, 6);
+  opacity: 70%;
+}
+
+/*=============================
+  - Main / Back-To-Top-Button -
+==============================*/
+
+#backToTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: rgb(247, 6, 6);
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  font-style: karla;
+  font-size: 18px;
 }
 
 /*=============================
@@ -82,28 +102,27 @@ header a:hover {
 ==============================*/
 
 main section figure article {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
 }
 
 figcaption.h2 {
-    font-family: karlabold;
-    opacity: 60%;
+  font-family: karlabold;
+  opacity: 60%;
 }
 
 figcaption.p {
-    color: #848484;
-    line-height: 2rem;
-    font-family: karla;
-    opacity: 80%;
-
+  color: #848484;
+  line-height: 2rem;
+  font-family: karla;
+  opacity: 80%;
 }
 
 figcaption.price {
-    opacity: 60%;
-    font-family: karlabold;
-    font-size: 1.2rem;
+  opacity: 60%;
+  font-family: karlabold;
+  font-size: 1.2rem;
 }
 
 /*=============================
@@ -111,14 +130,14 @@ figcaption.price {
 ==============================*/
 
 .firstSixItems {
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    justify-content: space-between;
-    gap: 30px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 3fr);
-    margin: 4rem 0;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-content: space-between;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 3fr);
+  margin: 4rem 0;
 }
 
 /*===============================
@@ -126,14 +145,14 @@ figcaption.price {
 ================================*/
 
 .secondSixItems {
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    justify-content: space-between;
-    gap: 30px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 3fr);
-    margin: 4rem 0;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-content: space-between;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 3fr);
+  margin: 4rem 0;
 }
 
 /*=============================
@@ -141,14 +160,14 @@ figcaption.price {
 ==============================*/
 
 .thirdSixItems {
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    justify-content: space-between;
-    gap: 30px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 3fr);
-    margin: 4rem 0;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-content: space-between;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 3fr);
+  margin: 4rem 0;
 }
 
 /*====================================
@@ -156,14 +175,14 @@ figcaption.price {
 ======================================*/
 
 .fourthSixItems {
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    justify-content: space-between;
-    gap: 30px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 3fr);
-    margin: 4rem 0;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-content: space-between;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 3fr);
+  margin: 4rem 0;
 }
 
 /*============================
@@ -171,13 +190,13 @@ figcaption.price {
 ==============================*/
 
 .lastThreeItems {
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    justify-content: space-between;
-    gap: 30px;
-    grid-template-columns: repeat(3, 1fr);
-    margin: 3rem 0;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-content: space-between;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 3rem 0;
 }
 
 /*============================
@@ -185,73 +204,44 @@ figcaption.price {
 ==============================*/
 
 footer {
-    display: grid;
-    gap: 30px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(1, 150px);
-    margin: 2rem 0;
-    width: 100%
-        /* background-color: red; */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+  margin: 2rem 0;
+  padding: 1rem;
+  background-color: #f1f1f1;
+  width: 100%;
 }
 
-
-article h4 {
-    background-color: green;
+footer article {
+  padding: 1rem;
 }
 
-article h5 {
-
+footer h3 {
+  margin-bottom: 1rem;
+  color: #333;
 }
 
-article p.paragraph {}
-
-
-article h3.footer
-
-
-footer article h4 a {
-    display: block;
-    width: 300px;
-    height: 200px;
-    background-color: red;
+footer p {
+  margin: 0.5rem 0;
+  color: #666;
 }
 
-footer article h4 a{
-    list-style: none;
-    text-decoration: none;
+footer a {
+  display: block;
+  color: #333;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
 }
 
-/* article.footerDesignShop {
-    display: grid;
-    align-content: space-between;
-    height: 100%;
-    background-color: green;
+footer a:hover {
+  color: #007bff;
+  text-decoration: none;
+  color: rgb(247, 6, 6);
+  opacity: 70%;
 }
 
-article.contact {
-    display: block;
-    justify-items: center;
- background-color: lightblue;
-    width: 100%;
+footer .trademark {
+  font-size: 0.875rem;
+  color: #999;
 }
-
-article.newsletter {
-    display: grid;
-    justify-content: end;
-    background-color: orange;
-    width: 200px;
-}
-
-.socialMedia a {
-    text-decoration: none;
-}
-
-
-article.socialMedia {
-    display: grid;
-    background-color: purple;
-}
-
-article p.trademark {
-    padd
-} */
