--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,23 +246,104 @@ footer .trademark {
   color: #999;
 }
 
-
-@media (max-width: 1024px) {
-  footer {
-    grid-template-columns: repeat(2, 1fr);
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 9px;
+    margin: 0;
   }
-}
 
-@media (max-width: 768px) {
+  header {
+    height: auto;
+    padding: 10px 0;
+  }
+
+  header h1 a {
+    font-size: 1.8rem;
+  }
+
+  header nav ul {
+    gap: 2rem;
+  }
+
+  #backToTop {
+    bottom: 10px;
+    right: 20px;
+    padding: 10px;
+    font-size: 14px;
+  }
+
+  .firstSixItems,
+  .secondSixItems,
+  .thirdSixItems,
+  .fourthSixItems,
+  .lastThreeItems {
+    display: block;
+    margin: 2rem 0;
+  }
+
+  .firstSixItems > *,
+  .secondSixItems > *,
+  .thirdSixItems > *,
+  .fourthSixItems > *,
+  .lastThreeItems > * {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
   footer {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, 1fr);
     gap: 20px;
+    margin-top: 2rem;
   }
 }
 
-@media (max-width: 480px) {
-  footer {
-    grid-template-columns: 1fr;
-    gap: 10px;
-    padding: 0.5rem;
+@media only screen and (min-width: 600px) {
+  header {
+    height: 16vh;
   }
+}
+
+@media only screen and (min-width: 768px) {
+  .firstSixItems,
+  .secondSixItems,
+  .thirdSixItems,
+  .fourthSixItems,
+  .lastThreeItems {
+    display: grid;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  html {
+    margin: auto 12%;
+  }
+
+  header {
+    height: 16vh;
+  }
+
+  header h1 a {
+    font-size: 2rem;
+  }
+
+  header nav ul {
+    gap: 4rem;
+  }
+
+  #backToTop {
+    display: block;
+  }
+
+  .firstSixItems,
+  .secondSixItems,
+  .thirdSixItems,
+  .fourthSixItems,
+  .lastThreeItems {
+    margin: 4rem 0;
+  }
+
+  /* footer {
+    grid-template-columns: repeat(4, 1fr);
+    margin: 2rem 0 0 0;
+  } */
+}
