--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,10 +246,14 @@ footer .trademark {
   color: #999;
 }
 
+/*============================
+        - Media Queries -
+==============================*/
+
 @media only screen and (max-width: 600px) {
   html {
     font-size: 9px;
-    margin: 0;
+    margin: auto 12%;
   }
 
   header {
@@ -258,7 +262,7 @@ footer .trademark {
   }
 
   header h1 a {
-    font-size: 1.8rem;
+    font-size: 1.3rem;
   }
 
   header nav ul {
@@ -294,6 +298,7 @@ footer .trademark {
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
     margin-top: 2rem;
+    text-align: center;
   }
 }
 
@@ -341,9 +346,4 @@ footer .trademark {
   .lastThreeItems {
     margin: 4rem 0;
   }
-
-  /* footer {
-    grid-template-columns: repeat(4, 1fr);
-    margin: 2rem 0 0 0;
-  } */
 }
