--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,12 +257,12 @@ footer .trademark {
   }
 
   header {
-    height: auto;
+    height: height: 16vh;
     padding: 10px 0;
   }
 
   header h1 a {
-    font-size: 1.3rem;
+    font-size: 1.7rem;
   }
 
   header nav ul {
@@ -294,12 +294,12 @@ footer .trademark {
   .thirdSixItems > *,
   .fourthSixItems > *,
   .lastThreeItems > * {
-    width: 60%;
+    width: 70%;
     margin-bottom: 20px;
   }
 
   footer {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     margin-top: 2rem;
     text-align: center;
