--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,10 +305,9 @@ footer .trademark {
   }
 
   footer {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1fr);
     gap: 20px;
     margin-top: 2rem;
-    text-align: center;
   }
 }
 
