--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,7 +305,7 @@ footer .trademark {
   }
 
   footer {
-    grid-template-columns: repeat(1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-top: 2rem;
   }
