--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,7 @@ footer {
 
 footer article {
   padding: 1rem;
+  width: 80%;
 }
 
 footer h3 {
@@ -308,6 +309,7 @@ footer .trademark {
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-top: 2rem;
+    width: 100%;
   }
 }
 
